--- a/_drafts/2014-01-01-vocal-fry.md
+++ b/_drafts/2014-01-01-vocal-fry.md
@@ -1,6 +1,6 @@
 ---
 title: Vocal Fry and Importance of Voice Health
-author: julie
+author: Dr. Julie Wei
 layout: post
 permalink: /vocal-fry/
 sc_chat_opt_show_chatbox:
