--- a/_drafts/2014-01-01-vocal-fry.md
+++ b/_drafts/2014-01-01-vocal-fry.md
@@ -2,6 +2,8 @@
 title: Vocal Fry and Importance of Voice Health
 author: Dr. Julie Wei
 layout: post
+categories: [undefined]
+tags: [blog]
 permalink: /vocal-fry/
 enclosure:
   - |
