Bug fixes for capitalization of tags and categories.  Both must be ALL LOWERCASE now.

--- a/_posts/2014-01-25-act-love.md
+++ b/_posts/2014-01-25-act-love.md
@@ -2,8 +2,8 @@
 title: Act of Love
 author: Dr. Julie Wei
 layout: post
-categories: [Undefined]
-tags: [Blog]
+categories: [undefined]
+tags: [blog]
 permalink: /act-love/
 ---
 <img class="alignleft size-medium wp-image-923" alt="hot food" src="/wp-content/uploads/2014/01/photo-10-225x300.jpg" width="225" height="300" />
