--- a/_posts/2013-02-11-coughing.md
+++ b/_posts/2013-02-11-coughing.md
@@ -2,8 +2,8 @@
 title: Coughing
 author: Dr. Julie Wei
 layout: post
-categories: [Undefined]
-tags: [Blog]
+categories: [undefined]
+tags: [blog]
 permalink: /coughing/
 ---
 **&#8220;3 Reasons Why Your Child Can&#8217;t Shake that Cough&#8221;**
