--- a/_posts/2014-01-01-vocal-fry.md
+++ b/_posts/2014-01-01-vocal-fry.md
@@ -2,8 +2,8 @@
 title: Vocal Fry and Importance of Voice Health
 author: Dr. Julie Wei
 layout: post
-categories: [Undefined]
-tags: [Blog]
+categories: [undefined]
+tags: [blog]
 permalink: /vocal-fry/
 enclosure:
   - |
