Added featured-image metadata to those with an image at the top of the post.

--- a/_posts/2014-01-01-vocal-fry.md
+++ b/_posts/2014-01-01-vocal-fry.md
@@ -5,13 +5,7 @@ layout: post
 categories: [undefined]
 tags: [blog]
 permalink: /vocal-fry/
-enclosure:
-  - |
-    |
-        wp-content/uploads/2014/01/Good-Day-Orlando_Dr.-Julie-Wei-and-Kelly-Hoyt.mp4
-        5918395
-        video/mp4
-        
+featured-image: /wp-content/uploads/2014/01/300px-Larynx_normal2a1.jpg        
 ---
 <div style="width: 310px" class="wp-caption alignright">
   <a href="http://commons.wikipedia.org/wiki/File:Larynx_normal2a.jpg" target="_blank"><img class="zemanta-img-inserted zemanta-img-configured" title="Larynx" alt="Larynx" src="/wp-content/uploads/2014/01/300px-Larynx_normal2a1.jpg" width="300" height="225" /></a>
