--- a/_posts/2014-01-25-act-love.md
+++ b/_posts/2014-01-25-act-love.md
@@ -5,6 +5,7 @@ layout: post
 categories: [undefined]
 tags: [blog]
 permalink: /act-love/
+featured-image: /wp-content/uploads/2014/01/photo-10-225x300.jpg
 ---
 <img class="alignleft size-medium wp-image-923" alt="hot food" src="/wp-content/uploads/2014/01/photo-10-225x300.jpg" width="225" height="300" />
 
