--- a/_posts/2013-02-11-coughing.md
+++ b/_posts/2013-02-11-coughing.md
@@ -14,20 +14,11 @@ If the answer is &#8220;yes&#8221; to any of the above, then please keep reading
 
 Top 3 reasons why the cough is still hanging on -
 
-**Number 3:  Habitual throat-clearing. **Whatever the reason was, your child started out having a bad cold and coughed due to being sick. Even after the fever and acute illness goes away after 7-10 days, their throat and voice box somehow stays irritated and they continue to cough. At some point, your child may not even realize that he/she is &#8220;coughing&#8221;. Often these are children who are throat-clearing and not really coughing (not as hard, more often less dramatic annoying short bursts, every few minutes).  It is likely a habit if you  no longer hear them &#8220;coughing&#8221; during sleep, but only when they are awake. These children often show no other signs of illness or discomfort. It&#8217;s a difficult diagnosis to make and usually after reasons Number 2 and Number 1 are ruled out, and can be a result of reason Number 1.  I often offer strategies to families to help break these habits such as having them help children suppress urge to &#8220;cough&#8221; using a kitchen timer, starting from 30 seconds and working up to 5 minute intervals.
+**Number 3:  Habitual throat-clearing.** Whatever the reason was, your child started out having a bad cold and coughed due to being sick. Even after the fever and acute illness goes away after 7-10 days, their throat and voice box somehow stays irritated and they continue to cough. At some point, your child may not even realize that he/she is &#8220;coughing&#8221;. Often these are children who are throat-clearing and not really coughing (not as hard, more often less dramatic annoying short bursts, every few minutes).  It is likely a habit if you  no longer hear them &#8220;coughing&#8221; during sleep, but only when they are awake. These children often show no other signs of illness or discomfort. It&#8217;s a difficult diagnosis to make and usually after reasons Number 2 and Number 1 are ruled out, and can be a result of reason Number 1.  I often offer strategies to families to help break these habits such as having them help children suppress urge to &#8220;cough&#8221; using a kitchen timer, starting from 30 seconds and working up to 5 minute intervals.
 
 **Number 2: Chronic rhinosinusitis**. your child may have developed true chronic rhinosinusitis which means inflammation from thickening of the lining inside their sinus cavities and their sinus &#8220;plumbing&#8221; is clogged up.  Chronic sinus inflammation is NOT a bacterial infection so antibiotics will not make it go away completely, even if it seems to decrease the cough temporarily.  This usually occurs in children older than 4, especially if they have underlying test proven allergies to common aero-allergens like trees, pollen, grass, dustmites, and other environmental allergens. Sometimes this is bad luck and develops after your child has experienced a terrible viral illness, such that the mucous membranes inside the nasal passages were so swollen that the natural drainage points that lead each sinus cavity i**<img class="alignleft  wp-image-291" title="CT Scan- Sinus inflammation" alt="" src="/wp-content/uploads/2013/08/Abnormal-CT-scan-of-Sinuses-300x300.jpg" width="300" height="300" />**nto the nasal passage are blocked, which then leads to the inflammation inside the sinus. Since there is a reflex called the &#8220;sinopulmonary reflex&#8221;, children who have this will continue to cough until the nasal passage and sinus mucous membranes are no longer inflammed and healthy again.  The only way to truly know is if your child had a CT scan or special imaging of their sinus cavities which can involve some radiation exposure. These children tend to complain of a stuff nose all the time along with the cough, and can&#8217;t blow anything out of their nose even if they try.
 
-**Number 1:** **The Milk and Cookie Disease (MCD)** Your child is coughing because day after day, night after night, their larynx (voice box) is bombarded with stomach content backwash (gastroesophageal reflux and laryngopharyngeal reflux) coming up to the voice box, irritating the voice box which is designed to &#8220;cough&#8221; as a way to keep unwanted materials from entering our airway. If it did not protect it self by coughing, then we would aspirate and possibly get pneumonia.  Find out how your child can live and eat in &#8220;[A Healthier Wei][1]&#8221; and fight the Milk and Cookie Disease, by minimizing dairy and sugar in the evenings and then his/her voice box can rest and not be in &#8220;fighting&#8221; mode all the time. I have met thousands of children who have chronic cough not because they are sick, but because they were eating a diet or drinking beverages containing too much dairy and sugar, as well as possibly greasy foods and processed foods.  All these items increase likelihood of reflux or backwash and assault on the larynx.
-
-&nbsp;
-
-<span style="width:105px;display:table;margin:0 auto;"><a href="the-book/"><img src="/wp-content/uploads/2014/04/AHealthierWei_cover_150.png" /></a></span>
-
-<p style="height:80px">
-  <span style="width:130px;display:inline-block;vertical-align:top;"> Order the Book <a href="https://itunes.apple.com/us/book/a-healthier-wei/id806784060?ls=1&mt=11#" target="_blank" > <img class="size-full wp-image-944" alt="Apple iBooks" title="Apple iBooks" src="/wp-content/uploads/2014/02/Download_on_iBooks_Badge_US-UK_110x40_090513.png" width="110" height="40" /></a> </span> <span style="width:150px;display:inline-block;vertical-align:top;">Available on <a href="http://amzn.to/1fSNqeb" target="_blank" > <img class="size-full wp-image-945" alt="Amazon.com" title="Amazon.com" src="/wp-content/uploads/2014/02/amazon_com_logo_160.jpg" width="160" height="47" /> </a> </span> <span  style="width:150px;display:inline-block;vertical-align:top;">Available on <a href="http://amzn.to/1eHEfNl" target="_blank" > <img class="size-full wp-image-946" alt="Amazon Kindle" title="Amazon Kindle" src="/wp-content/uploads/2014/02/kindle_logo_160.jpg" width="160" height="43" /> </a> </span> <span style="width:150px;display:inline-block;vertical-align:top;">Available on <a href="http://www.barnesandnoble.com/w/a-healthier-wei-julie-wei/1118260302?ean=2940148244592&itm=1&usri=2940148244592" target="_blank" > <img class="size-full wp-image-947" alt="Nook" title="Nook" src="/wp-content/uploads/2014/02/nook_logo_160.png" width="160" height="52" /></a> </span>
-</p>
-
+**Number 1: The Milk and Cookie Disease (MCD)** Your child is coughing because day after day, night after night, their larynx (voice box) is bombarded with stomach content backwash (gastroesophageal reflux and laryngopharyngeal reflux) coming up to the voice box, irritating the voice box which is designed to &#8220;cough&#8221; as a way to keep unwanted materials from entering our airway. If it did not protect it self by coughing, then we would aspirate and possibly get pneumonia.  Find out how your child can live and eat in &#8220;[A Healthier Wei][1]&#8221; and fight the Milk and Cookie Disease, by minimizing dairy and sugar in the evenings and then his/her voice box can rest and not be in &#8220;fighting&#8221; mode all the time. I have met thousands of children who have chronic cough not because they are sick, but because they were eating a diet or drinking beverages containing too much dairy and sugar, as well as possibly greasy foods and processed foods.  All these items increase likelihood of reflux or backwash and assault on the larynx.
 
 
  [1]: the-book/ "The Book"
