Changed link from the-book to /book/

--- a/_posts/2013-02-11-coughing.md
+++ b/_posts/2013-02-11-coughing.md
@@ -21,5 +21,5 @@ Top 3 reasons why the cough is still hanging on -
 **Number 1: The Milk and Cookie Disease (MCD)** Your child is coughing because day after day, night after night, their larynx (voice box) is bombarded with stomach content backwash (gastroesophageal reflux and laryngopharyngeal reflux) coming up to the voice box, irritating the voice box which is designed to &#8220;cough&#8221; as a way to keep unwanted materials from entering our airway. If it did not protect it self by coughing, then we would aspirate and possibly get pneumonia.  Find out how your child can live and eat in &#8220;[A Healthier Wei][1]&#8221; and fight the Milk and Cookie Disease, by minimizing dairy and sugar in the evenings and then his/her voice box can rest and not be in &#8220;fighting&#8221; mode all the time. I have met thousands of children who have chronic cough not because they are sick, but because they were eating a diet or drinking beverages containing too much dairy and sugar, as well as possibly greasy foods and processed foods.  All these items increase likelihood of reflux or backwash and assault on the larynx.
 
 
- [1]: the-book/ "The Book"
- [2]: the-book
+ [1]: /book/ "The Book"
+ [2]: /book/
