--- a/_posts/2014-01-01-vocal-fry.md
+++ b/_posts/2014-01-01-vocal-fry.md
@@ -46,4 +46,4 @@ Back to vocal fry. Recent[ research study][6] published in the Journal of Voice 
  [4]: http://www.huffingtonpost.com/tag/vocal-fry
  [5]: http://news.sciencemag.org/social-sciences/2011/12/vocal-fry-creeping-u.s.-speech
  [6]: http://www.jvoice.org/article/S0892-1997(11)00070-1/fulltext
- [7]: the-book
+ [7]: /book/
